--- a/fe/src/index.html
+++ b/fe/src/index.html
@@ -12,6 +12,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/css/custom/home.css" />
+    <link rel="stylesheet" href="/css/custom/detail.css" />
   </head>
   <body>
     <section ng-view></section>
