sửa đường dẫn index

--- a/fe/src/index.html
+++ b/fe/src/index.html
@@ -25,7 +25,7 @@
       integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="/css/custom/home.css" />
+    <link rel="stylesheet" href="../css/custom/home.css" />
   </head>
   <body>
     <section ng-view></section>
@@ -35,8 +35,8 @@
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
       crossorigin="anonymous"
     ></script>
-    <script src="/lib/angular-1.8.2/angular.js"></script>
-    <script src="/lib/angular-1.8.2/angular-route.js"></script>
+    <script src="../lib/angular-1.8.2/angular.js"></script>
+    <script src="../lib/angular-1.8.2/angular-route.js"></script>
     <script src="./route.js"></script>
   </body>
 </html>
