--- a/fe/src/index.html
+++ b/fe/src/index.html
@@ -36,6 +36,7 @@
     <link rel="stylesheet" href="../css/custom/home.css" />
     <link rel="stylesheet" href="../css/custom/listproduct.css" />
     <link rel="stylesheet" href="../css/custom/login.css" />
+    <link rel="stylesheet" href="../css/custom/dashbroad.css" />
   </head>
 
   <body>
